--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,13 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif ;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+}
+
